# DevOps

./: Dockerfile  HTTP_Server  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  debian.deb  my_program  scriptA.sh  test_program  test_server
.github/workflows/: build.yml  ci.yml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
debian/: changelog  control
debian/DEBIAN/: control
src/: TrigFunction.cpp  TrigFunction.h  main.cpp
src/.deps/: TrigFunction.Po  main.Po
src/server/: HTTPServer.cpp  HTTPServer.h  main_Server.cpp
src/server/.deps/: HTTPServer.Po  main_Server.Po
tests/: configure.ac  test.cpp  test_server.cpp
tests/.deps/: test.Po  test_server.Po
